[tool.poetry]
name = "pecc"
version = "0.1.0"
description = "Python Epitopic Charge Calculator"
authors = ["JasonMendoza2008 <lhotteromain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
