[tool.poetry]
name = "pecc"
version = "0.2.3"
description = "Python Epitopic Charge Calculator"
authors = ["JasonMendoza2008 <lhotteromain@gmail.com>"]
readme = "README.md"
packages = [
    {include = "pecc"},
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-mypy = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
