[tool.poetry]
name = "pelc"
version = "0.5.4.5"
description = "Python Eplet Load Calculator"
authors = ["JasonMendoza2008 <lhotteromain@gmail.com>"]
readme = "README.md"
packages = [
    {include = "pelc"},
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
openpyxl = "^3.0.10"
pandas-stubs = "^2.1.4.231227"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-mypy = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
